test/success/float-ints.dsk
let f =  1.12
let i =  1

let f1: float =  1.12
let i2: int = 1

assert(f == 1.12)
assert(i == 1)

assert(f == f1)
assert(i == i2)
