test/error/sema/struct-field-assign-type-mismatch.dsk
struct S
    x: int
end

let s = S(x = 1)
s.x = "hello"
